--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,4 @@ spring.datasource.password=root
 spring.datasource.url=jdbc:mysql://localhost:3306/udemy
 spring.jpa.hibernate.ddl-auto=update
 tokenSecret=jf9i4jgu83nfl0gjngdnbzez
+server.servlet.context-path=/mobile-app-ws
