email address verification functionality

--- a/pom.xml
+++ b/pom.xml
@@ -78,6 +78,13 @@
       <groupId>org.modelmapper</groupId>
       <artifactId>modelmapper</artifactId>
     </dependency>
+
+    <dependency>
+      <groupId>com.amazonaws</groupId>
+      <artifactId>aws-java-sdk-ses</artifactId>
+      <version>1.11.959</version>
+    </dependency>
+
   </dependencies>
 
   <build>
